Spring 核心容器、AOP、MVC

--- a/JUC/线程设计模式.md
+++ b/JUC/线程设计模式.md
@@ -1,7 +1,7 @@
 ---
 date: 2025-04-14
 ---
-# 两阶段终止模式
+# 一、线程两阶段终止模式
 
 通过两个阶段来安全地停止线程：​**​第一阶段​**​发出终止请求，​**​第二阶段​**​等待线程完成资源清理工作后真正终止。
 
@@ -49,4 +49,12 @@ public static void main(String[] args) throws InterruptedException {
     log.debug("main finished!");  
 }
 ```
+
+
+# 二、保护性暂停 `Guarded Suspension Pattern`
+
+`线程间通信` 的经典模式，通过 `GuardedObject` 受保护对象**关联两个线程**，利用受保护对象实现线程A等待线程B的结果（强调一对一）。
+
+`GuardedObject` 包含 4 个重要组成部分：响应结果，锁，获取响应结果的阻塞方法，生产响应结果的生产方法。
+
 
