--- a/Network/网络层.md
+++ b/Network/网络层.md
@@ -1,1 +1,44 @@
+
+在 TCP/IP 四层模型中，网络层通过 IP 协议实现不同网络之间的互联，路由器则负责根据路由表转发数据包。在同一个子网内，主机使用 ARP 协议将目标 IP 地址解析为 MAC 地址，以完成链路层通信。多个主机在私有网络中可以通过 NAT 共享一个公网 IPv4 地址访问互联网，从而缓解地址资源紧张的问题。路由器可以使用 RIP、OSPF 等动态路由协议构建路由表，或使用静态配置。路由表中的 IPv4 地址使用 CIDR（无类域间路由）方式进行编址，提高了地址利用率和路由聚合能力。
+
+![[attachments/Pasted image 20250519101254.png]]
+
 # IP 协议
+
+## IP 数据报格式
+
+![[attachments/Pasted image 20250519101555.png]]
+
+## IP 数据报分片
+
+IP 数据报传输依赖数据链路层的数据帧，当 IP 数据报大小达到数据帧的最大长度时，IP 数据报进行分片。
+
+IP 数据报分片时使用标识、标志和片偏移三个首部字段对分片后的 IP 数据报进行区分和识别。
+
+![[attachments/Pasted image 20250519101801.png]]
+
+## IPv4 地址
+
+IPv4 地址有 32 bit 位，分为网络号和主机号，使用进行 CIDR 无分类编址。
+
+![[attachments/Pasted image 20250519102822.png]]
+
+### 地址聚合
+
+路由聚合是将多个前缀相近、下一跳相同的路由条目合并为一条 CIDR 路由项的过程。例如路由器 B 连接到路由器 A，A 下有两个连续子网 192.168.0.0/24 和 192.168.1.0/24，B 的路由表中原本有两条指向 A 的路由，可以聚合为一条 192.168.0.0/23 的路由，减少表项，提高转发效率。
+
+![[attachments/Pasted image 20250519103317.png]]
+
+# ARP 协议
+
+地址转换，将 IP 转换位 MAC，数据链路层传输数据。
+# DHCP 协议
+
+动态分配 IP 地址。
+
+# ICMP 协议
+
+传递网络状态信息（如错误报告、诊断工具）。
+# RIP 协议、OSPF 协议
+
+构建路由表。
