--- a/mysql/锁-行级锁.md
+++ b/mysql/锁-行级锁.md
@@ -78,7 +78,7 @@ mindmap
 ### 普通索引
 
 在非唯一索引精确查询中，  
-如果查询结果部位空使用 next-key lock 锁定索引项（索引和对应主键），并锁定末尾间隙防止幻读。
+如果查询结果不为空使用 next-key lock 锁定索引项（索引和对应主键），并锁定末尾间隙防止幻读。
 
 如果查询结果为空，则会对目标值应插入的位置的间隙加锁（间隙锁），以防止幻读。
 ## 范围查询
