--- a/其他/简历模板.md
+++ b/其他/简历模板.md
@@ -1,49 +1,60 @@
 ---
 date: 2025-05-11
 ---
+
 ## 个人信息
 ---
-**姓名**：黄兴鑫
-**性别**：男
-**出生年月**：2002.05（23岁）
-**籍贯**：四川泸州
-**电话/邮箱**：15298262348 | 15298262348@163.com
-**求职意向**：Java后端开发实习
+基础信息：黄兴鑫 | 男 
+电话/邮箱：15298262348 |  15298262348@163.com
+技术博客：http://blog.afishingcat.xin/
 ## 教育背景
 ---
-**西南石油大学（双一流）**
-软件工程（本科）
-2022.09 - 2026.06（预计）
-**GPA：3.75 (前10%)**
-英语六级（CET-6）
-## 专业技能
+**西南石油大学** `双一流` | 2022.09 - 2026.06 | 软件工程 | 本科
+**GPA：3.76 (前10%)** | 英语六级
+## 实习经历
 ---
-- 熟悉 TCP/IP 四层模型、HTTP/HTTPS 协议及常见网络通信机制，掌握进程管理、内存管理等操作系统基础。
-- 扎实掌握 Java 核心语法，熟悉异常处理、集合框架、泛型、I/O、Stream 和反射等特性。
-- 熟悉 MySQL 的事务、索引、日志、MVCC 和锁机制，具备 SQL 编写与优化能力。
-- 熟悉 Redis 的数据结构、持久化机制、内存管理及集群配置，了解其网络模型及高可用原理。
-- 熟悉 Spring、Spring MVC、Spring Boot 等主流框架，理解 IoC、AOP、事务管理及自动装配原理。
-- 熟悉 MyBatis，理解其核心执行流程，熟练使用 MyBatis-Plus 简化开发。
-- 了解 Java 并发编程及多线程模型，掌握常见并发工具类。
-- 了解 RabbitMQ 消息队列及其在分布式解耦中的应用。
-- 了解分布式与微服务架构，熟悉 Spring Cloud 及常用组件。
-- 了解 Linux、Nginx，了解后端服务部署流程，熟练使用 Maven、Git 等开发工具。
+### 致远互联（2025.06 - 2025.08）
+**项目名称**：四川发展（控股）协同运营平台
+**项目描述**：国企协同运营平台，覆盖资本运营、办公、业务、财务与组织管理，实现跨层级、跨部门协同与数据贯通，提升运营效率与决策精准度。
+**参与模块**：智慧党建
+**职责**：
+- 负责智慧党建模块的多系统数据同步建设，以协同平台为“唯一事实源”，自动推送组织新增/修改/删除变更；封装 SFTP 工具链拉取三方组织 CSV 并归档入库。
+- **设计并实现组织树差异分析算法**，将**复杂度由最坏 O(N²) 优化至平均 O(N)**，按“增/改/删”顺序生成有序操作序列，显著提升接口响应与批量推送吞吐，保障大规模组织变更下的数据一致性与稳定性。
 ## 项目经验
 ---
-### 图协空间 (2025.03 - 2025.05)
-- **项目链接**：https://collabimage.afishingcat.xin
-- **项目描述**：一个云端的图片协作系统，支持公共、私人与团队空间，提供图片上传、下载、编辑和 AI 扩图功能，实现协同编辑、图片审核与空间使用分析。
-- **技术栈**：`Spring Boot` `Spring Cache` `Sa-Token` `Mybatis-plus` `COS` `MySQL` `Redis` `Caffeine` `WebSocket` `Disruptor` `JWT` `Guava`
-- **个人职责**：
-	- **设计并搭建**支持公共、私有、团队空间的**图片资源协作体系**，满足多角色的协同管理与共享需求，提升整体协作效率和资源利用率。
-	- **主导实现**图片上传、下载、在线编辑与 AI 扩图功能，使用**模板化上传流程**结合 COS 对象存储，自动生成多规格图片，显著优化图片加载性能与资源复用。
-	- **设计并实现**基于 JWT + RefreshToken 的**双 Token 身份认证机制**，结合 Sa-Token 管理登录状态，确保账户安全和**登录长期有效**。
-	- **设计构建空间和图片级别的细粒度权限系统**，支持角色分配、授权，保证多人协作场景下的权限安全可控。
-	- **设计实现多层级图片内容自动审核**，结合黑名单、第三方内容安全 API 和人工复审，确保资源合规性和敏感内容拦截的高可靠性。
-	- **实现多人实时协同编辑能力**，基于 WebSocket + Disruptor 构建事件驱动模型，保障高并发下数据一致性与低延迟同步，显著提升系统吞吐量和响应速度。
-	- **集成常用图片处理能力**（格式转换、分辨率压缩、尺寸裁剪等），支持在线预览与快速编辑，显著提升用户端图片管理体验与操作便利性。
-	- **设计多级分层缓存与热点 Key 提升机制**（Redis + Caffeine + 布隆过滤器），结合 Spring Cache、AOP 与定时任务动态识别高频数据，优化访问性能与缓存命中率。
-	- **设计实现接口限流和防刷机制**，基于 IP + 方法名维度，结合 Guava 限流器与自定义拦截器，有效防御恶意流量攻击，保障系统稳定性。
-## 个人评价
+### 墨灵共绘（2025.03 - 2025.06）
+**项目链接**：https://collabimage.afishingcat.xin  
+**项目定位**：面向多角色协作的云端图库系统，集成 AI 审核与智能处理能力，支持公共、私有、团队多空间图片管理，融合在线协同编辑、状态机审核流程、多级权限控制与高性能缓存机制，致力于构建安全、高效、智能的一站式图像协作平台。
+**技术栈**：`SpringBoot` `SpringCache` `Sa-Token` `MyBatis-Plus` `COS` `MySQL` `Redis` `Caffeine` `WebSocket` `Disruptor` `JWT` `Guava` `RabbitMQ` `SSE` `SpringStateMachine`
+ **项目核心功能**：
+- 搭建**自动化闭环审核**，设计**图片审核状态机**并基于 Spring StateMachine 实现图片**机审-复审-申诉自动流转**流程，同时利用 RabbitMQ 解耦上传与审核，结合消息推送实时反馈审核结果，提升处理效率与合规性。
+- **可拓展审核消息推送**机制，设计统一消息模型，利用 RabbitMQ 构建**异步消息系统**，结合 WebSocket/SSE 实现低耦合推送机制，保障消息在**在线/离线全场景**下可靠送达。
+- 支持**在线协同编辑**图片，WebSocket 实现实时通信，借助 Disruptor 构建高效的**事件驱动**模型，提升并发事件处理能力并降低响应延迟；通过业务规则有效**解决协同冲突**，优化用户体验。
+- 构建**邮箱防刷注册**与**双 Token 身份验证**体系，结合滑块验证、异步邮件、黑名单机制与会话续签，有效保障系统抗压能力与账户安全。
+- 支持多维度、细粒度的权限控制，设计**空间隔离的 RBAC 模型**并基于 Sa-Token 落地实现。采用**模板方法统一图片上传**流程，支持文件与 URL 上传，并集成 COS 与 AI 实现智能化图片处理。
+- 为热点图片构建**多级缓存**，基于 Spring Cache 与 SpEL 实现无侵入式集成，支持不同缓存策略配置与**自动 HotKey 探测与升级**机制，同时结合**方法 + IP级限流**提升系统访问效率与稳定性。
+### 闪券引擎（2025.06 - 2025.08）
+**项目定位**：面向外卖、电商场景的高并发优惠券系统，提供优惠券秒杀、预约提醒、分发、核销、退款等全链路能力。支持亿级优惠券存储与百万级优惠券分发，保障优惠券发放不漏发、不多发、低延迟。
+**技术栈**：`SpringBoot` `MyBatis-plus` `MySQL` `Redis` `XXL-Job` `Redisson` `RocketMQ 5.x` `Canal` `ShardingSphere` `EasyExcel`
+**项目核心功能**：
+- 支撑**亿级优惠券存储**，借鉴**页表寻址**思想设计基于ShardingSphere的**水平分库分表算法**，精准实现数据库路由，解决跨库查询性能瓶颈。
+- 实现**百万级优惠券推送**，采用 EasyExcel 解析百万用户 Excel，线程池异步解析，利用消息队列解耦数据处理与推送，结合批量操作与 Lua 脚本，实现**百万级推送仅耗时 5 分钟**。
+- 高效的优惠券预约提醒，**位图存储用户预约信息**，高低位编码通知方式与时间，位操作解析；消息队列**延时消息**延时通知，**线程池解耦 I/O 密集型任务**，提升吞吐量与响应效率。
+- 秒杀与兑换环节，借助**Lua 脚本**保障库存校验与扣减的**原子性**，通过**消息队列解耦**数据库操作与缓存写入，保证数据一致性，显著提升秒杀性能，单机 TPS 达到 1500+。
+- 查询可用/不可用优惠券时，利用 Redis Pipeline 实现**批量查询**，并采用 **CompletableFuture 异步编排**计算优惠券折扣，整体查询性能提升约 10%，单机 QPS 峰值达到 7000+。
+- 使用**责任链模式**优化优惠券校验流程，结算流程引入**策略模式**，支持多样化复杂优惠规则的扩展与维护，使用**模板方法模式**构建统一消息发送流程。
+## 专业技能
 ---
-具备扎实的计算机基础与后端开发能力，熟悉常用开发框架与数据库，能够独立分析和解决实际问题；热衷钻研底层原理和技术细节，注重代码规范和性能优化；学习能力强，善于利用文档和工具快速定位问题，具备良好的团队协作与沟通意识，积极主动推动自我成长和项目进展。
+- 熟悉计算机网络、计算机操作系统、常见数据结构与算法、常见设计模式、数据库设计和 UML。
+- 熟练掌握 Java 核心语法，异常处理、集合框架、泛型、I/O、Stream 和反射等特性。
+- 熟悉 MySQL 的事务、索引、日志、MVCC 和锁机制，了解 SQL 优化。
+- 熟悉 MyBatis，理解其核心执行流程，熟练使用 MyBatis-Plus 简化开发。
+- 熟悉 Redis 的数据结构、持久化机制、内存管理，了解其网络模型及高可用原理。
+- 熟悉 Spring、Spring MVC、Spring Boot 等主流框架，理解 Bean 生命周期、IoC、AOP、事务管理及自动装配原理。
+- 熟悉消息队列在服务解耦中的应用，熟练使用 RabbitMQ。
+- 了解 Java 并发编程，了解 ThreadPool、synchronized、ReentrantLock、ThreadLocal 和 AQS 等。
+- 了解分布式与微服务架构及其相关理论，了解 Spring Cloud 及常用组件。
+- 了解 Linux、Nginx、Docker 等，熟练使用 Maven、Git 等技术或开发工具。
+- 熟练使用 AI 工具（如 ChatGPT、Cursor）辅助学习新技术、快速生成开发模板与样板代码，加速开发效率。
+
+
