add: 新增技术博客

--- a/其他/简历模板.md
+++ b/其他/简历模板.md
@@ -1,7 +1,6 @@
 ---
 date: 2025-05-11
 ---
-
 ## 个人信息
 ---
 基础信息：黄兴鑫 | 男 
@@ -18,8 +17,8 @@ date: 2025-05-11
 **项目描述**：国企协同运营平台，覆盖资本运营、办公、业务、财务与组织管理，实现跨层级、跨部门协同与数据贯通，提升运营效率与决策精准度。
 **参与模块**：智慧党建
 **职责**：
-- 负责智慧党建模块的多系统数据同步建设，以协同平台为“唯一事实源”，自动推送组织新增/修改/删除变更；封装 SFTP 工具链拉取三方组织 CSV 并归档入库。
-- **设计并实现组织树差异分析算法**，将**复杂度由最坏 O(N²) 优化至平均 O(N)**，按“增/改/删”顺序生成有序操作序列，显著提升接口响应与批量推送吞吐，保障大规模组织变更下的数据一致性与稳定性。
+- 负责智慧党建模块多系统数据同步：以协同平台为“唯一事实源”，封装 SFTP 接入定时拉取第三方组织 CSV 并归档解析，基于组织树差异化算法生成有序操作序列自动推送至下游系统。
+- **设计并实现组织树差异分析算法**，基于树结构分析将**复杂度由最坏 O(N²) 优化至平均 O(N)**，显著提升接口响应与批量推送吞吐，保障大规模组织变更下的数据一致性与稳定性。
 ## 项目经验
 ---
 ### 墨灵共绘（2025.03 - 2025.06）
@@ -27,19 +26,19 @@ date: 2025-05-11
 **项目定位**：面向多角色协作的云端图库系统，集成 AI 审核与智能处理能力，支持公共、私有、团队多空间图片管理，融合在线协同编辑、状态机审核流程、多级权限控制与高性能缓存机制，致力于构建安全、高效、智能的一站式图像协作平台。
 **技术栈**：`SpringBoot` `SpringCache` `Sa-Token` `MyBatis-Plus` `COS` `MySQL` `Redis` `Caffeine` `WebSocket` `Disruptor` `JWT` `Guava` `RabbitMQ` `SSE` `SpringStateMachine`
  **项目核心功能**：
-- 搭建**自动化闭环审核**，设计**图片审核状态机**并基于 Spring StateMachine 实现图片**机审-复审-申诉自动流转**流程，同时利用 RabbitMQ 解耦上传与审核，结合消息推送实时反馈审核结果，提升处理效率与合规性。
+- 设计**自动化闭环审核**，设计**图片审核状态机**并基于 Spring StateMachine 实现图片**机审-复审-申诉自动流转**流程，同时利用 RabbitMQ 解耦上传与审核，结合消息推送实时反馈审核结果，提升处理效率与合规性。
 - **可拓展审核消息推送**机制，设计统一消息模型，利用 RabbitMQ 构建**异步消息系统**，结合 WebSocket/SSE 实现低耦合推送机制，保障消息在**在线/离线全场景**下可靠送达。
 - 支持**在线协同编辑**图片，WebSocket 实现实时通信，借助 Disruptor 构建高效的**事件驱动**模型，提升并发事件处理能力并降低响应延迟；通过业务规则有效**解决协同冲突**，优化用户体验。
-- 构建**邮箱防刷注册**与**双 Token 身份验证**体系，结合滑块验证、异步邮件、黑名单机制与会话续签，有效保障系统抗压能力与账户安全。
+- 构建**邮箱防刷注册**与**JWT 双 Token 身份验证**体系，结合滑块验证、异步邮件、黑名单机制与会话续签，有效保障系统抗压能力与账户安全。
 - 支持多维度、细粒度的权限控制，设计**空间隔离的 RBAC 模型**并基于 Sa-Token 落地实现。采用**模板方法统一图片上传**流程，支持文件与 URL 上传，并集成 COS 与 AI 实现智能化图片处理。
 - 为热点图片构建**多级缓存**，基于 Spring Cache 与 SpEL 实现无侵入式集成，支持不同缓存策略配置与**自动 HotKey 探测与升级**机制，同时结合**方法 + IP级限流**提升系统访问效率与稳定性。
 ### 闪券引擎（2025.06 - 2025.08）
-**项目定位**：面向外卖、电商场景的高并发优惠券系统，提供优惠券秒杀、预约提醒、分发、核销、退款等全链路能力。支持亿级优惠券存储与百万级优惠券分发，保障优惠券发放不漏发、不多发、低延迟。
+**项目定位**：面向外卖、电商场景的优惠券系统，提供优惠券秒杀、预约提醒、分发、核销、退款等全链路能力。支持亿级优惠券存储与百万级优惠券分发，保障优惠券发放不漏发、不多发、低延迟。
 **技术栈**：`SpringBoot` `MyBatis-plus` `MySQL` `Redis` `XXL-Job` `Redisson` `RocketMQ 5.x` `Canal` `ShardingSphere` `EasyExcel`
 **项目核心功能**：
-- 支撑**亿级优惠券存储**，借鉴**页表寻址**思想设计基于ShardingSphere的**水平分库分表算法**，精准实现数据库路由，解决跨库查询性能瓶颈。
-- 实现**百万级优惠券推送**，采用 EasyExcel 解析百万用户 Excel，线程池异步解析，利用消息队列解耦数据处理与推送，结合批量操作与 Lua 脚本，实现**百万级推送仅耗时 5 分钟**。
-- 高效的优惠券预约提醒，**位图存储用户预约信息**，高低位编码通知方式与时间，位操作解析；消息队列**延时消息**延时通知，**线程池解耦 I/O 密集型任务**，提升吞吐量与响应效率。
+- 支撑**亿级优惠券存储**，借鉴**页表寻址**思想设计基于 ShardingSphere 的**水平分库分表算法**，精准实现数据库路由，解决跨分片查询和读扩散等问题，提高系统查询性能。
+- 实现**百万级优惠券分发**，EasyExcel 结合 **线程池异步解析**用户 Excel，延时阻塞队列兜底保障任务落库；整合消息队列、Redis 缓冲池与 Lua 脚本，并用**批处理**替代逐行操作，将百万分发耗时缩短至 **约 5 分钟**。
+- 设计高性能优惠券预约提醒服务，使用**位图**在单列中**编码**多渠道与 5 分钟粒度的提醒时段，结合延时消息、线程池异步通知和布隆过滤优化取消判定与重试,实现**可撤销的多渠道预约**能力
 - 秒杀与兑换环节，借助**Lua 脚本**保障库存校验与扣减的**原子性**，通过**消息队列解耦**数据库操作与缓存写入，保证数据一致性，显著提升秒杀性能，单机 TPS 达到 1500+。
 - 查询可用/不可用优惠券时，利用 Redis Pipeline 实现**批量查询**，并采用 **CompletableFuture 异步编排**计算优惠券折扣，整体查询性能提升约 10%，单机 QPS 峰值达到 7000+。
 - 使用**责任链模式**优化优惠券校验流程，结算流程引入**策略模式**，支持多样化复杂优惠规则的扩展与维护，使用**模板方法模式**构建统一消息发送流程。
